Inspection fixes